--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -14,5 +14,9 @@ Vagrant.configure("2") do |config|
     trigger.info = "Restarting Apache"
     trigger.run_remote = {inline: "docker restart apache-server"}
   end
+  
+  config.vm.provider "virtualbox" do |vb|
+    vb.customize [ 'modifyvm', :id, '--uartmode1', 'disconnected']
+  end
 
 end
